handling OSiV and N+1